samples/_failures_safe/1761078444_dea4f3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d9f6b9f5.c: In function ‘main’:
./samples/SAFE/__tmp_d9f6b9f5.c:183:9: error: expected expression at end of input
  183 |         if (scanf("%d %d %d", &src, &dest, &weight) !=
      |         ^~
./samples/SAFE/__tmp_d9f6b9f5.c:183:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d9f6b9f5.c:183:9: error: expected declaration or statement at end of input
